--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
-  bucket: "S3 Bucket"
+  bucket: 'spacetimespace.com'
   skip_cleanup: true
   local-dir: dist
   region: us-east-2
